--- a/apps/ecclesiaweb/package.json
+++ b/apps/ecclesiaweb/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "type-check": "tsc --noEmit",
+    "clean": "rm -rf .next",
+    "preview": "next build && next start"
   },
   "dependencies": {
     "@prisma/client": "^6.10.1",
